--- a/views/sequence-generator.html
+++ b/views/sequence-generator.html
@@ -1,4 +1,4 @@
 <div ng-controller="ExerciseController as ctrl">
-    {{ctrl.seq}}
+    test {{ctrl.seq}}
     <button ng-click="ctrl.generateSequence()">Generate Sequence</button>
 </div>
