--- a/views/sequence-generator.html
+++ b/views/sequence-generator.html
@@ -1,4 +1,8 @@
 <div ng-controller="ExerciseController as ctrl">
-    test {{ctrl.seq}}
-    <button ng-click="ctrl.generateSequence()">Generate Sequence</button>
+    <div class="row">
+        <div class="col-md-offset-5">
+            <p ng-bind="ctrl.seq"></p>
+            <button type="button" class="btn btn-lg btn-primary" ng-click="ctrl.generateSequence()">Generate Sequence</button>
+        </div>
+    </div>
 </div>
