Refs #1: adding bower.json and seqGen style mod.

--- a/views/sequence-generator.html
+++ b/views/sequence-generator.html
@@ -1,7 +1,7 @@
 <div ng-controller="ExerciseController as ctrl">
-    <div class="row">
-        <div class="col-md-offset-5">
-            <p ng-bind="ctrl.seq"></p>
+    <div>
+        <div>
+            <div ng-bind="ctrl.seq"></div>
             <button type="button" class="btn btn-lg btn-primary" ng-click="ctrl.generateSequence()">Generate Sequence</button>
         </div>
     </div>
