Refs #5: creating directive for metronomy

--- a/views/sequence-generator.html
+++ b/views/sequence-generator.html
@@ -1,8 +1,8 @@
 <div ng-controller="ExerciseController as ctrl">
-    <div>
-        <div>
-            <div ng-bind="ctrl.seq"></div>
-            <button type="button" class="btn btn-lg btn-primary" ng-click="ctrl.generateSequence()">Generate Sequence</button>
-        </div>
+    <div class="form-group">
+        <div ng-bind="ctrl.seq"></div>
+    </div>
+    <div class="form-group">
+        <button type="button" class="btn btn-lg btn-primary" ng-click="ctrl.generateSequence()">Generate Sequence</button>
     </div>
 </div>
